alb-master.tf
# Create a new load balancer
resource "aws_alb" "master" {
  name            = "${var.pre_tag}-Master-ALB-${var.post_tag}"
  internal        = false
  security_groups = ["${var.public_security_group_id}"]
  subnets         = ["${var.public_subnet_id}","${aws_subnet.public-secondary.id}"]


  tags {
    Name = "${var.pre_tag}-Master-${var.post_tag}"
    Service = "${var.tag_service}"
    Environment = "${var.tag_environment}"
    Version = "${var.tag_version}"
  }
}

resource "aws_alb_target_group" "dcos-masters" {
  name     = "${var.pre_tag}-Master-Target-Group"
  port     = 80
  protocol = "HTTP"
  vpc_id   = "${var.vpc_id}"

  health_check {
    healthy_threshold = 2
    unhealthy_threshold = 2
    port = 5050
    path = "/health"
  }
}
